# ajna-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.local  README.md  docker-compose.yml  gunicorn.conf.py  latest_migrations.manifest  lint-requirements.in  lint-requirements.txt  pyproject.toml  release-notes.md  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: deploy.yml  deploy_production.yml  deploy_staging.yml  pr-format-check.yml  release.yml  test.yml  test_pr.yml
ajna/: apps.py  celery.py  celery_app.py  chain.py  constants.py  metrics.py  renderer.py  shit.py
ajna/management/commands/: backpopulate_ajna_price_on_takes.py  backpopulate_avalanche.py  backpopulate_hemi.py  backpopulate_pool_volume_snapshot.py  backpopulate_rari.py  clear_v2_event_related_tables.py  copy_v2_snapshots.py  fix_auction_eoa_addresses.py  fix_lend_apr.py  fix_pool_actual_utilization.py  fix_pool_collateralization.py  fix_pool_snapshot_actual_utilization.py  fix_pool_snapshot_utilization.py  fix_rari_stablecoin_prices.py  fix_snapshot_collateral_price.py  fix_v2.py  fix_v2_erc_flag.py  fix_v2_last_block_number.py  fix_v2_notifications.py  fix_v2_np.py  fix_v2_reserves.py  fix_v3_np_tp_ratio.py  fix_v3_reserves.py  fix_wallet_supply.py  fix_yieldbtc_pool_snapshot_price.py  makemigrations.py  populate_v2_auctions_tx_hash.py  populate_v2_market_prices.py  populate_v2_pool_token_symbol.py  populate_v2_wallet_eoa.py  populate_v3_networks_stats.py  populate_v4_network_stats.py  redo_v3_goerli_auctions.py  refresh_v2_auctions.py  repopulate_v2_goerli_auction_data.py  reset_v2_ethereum.py  reset_v2_goerli.py  reset_v3_base.py  reset_v3_ethereum.py  reset_v3_goerli.py  (+5 more)
ajna/migrations/: 0001_initial.py  0002_v1ethereumpricefeed_v1goerlipricefeed.py  0003_v1goerliremovecollateral_v1ethereumremovecollateral.py  0004_v1goerliaddcollateral_v1ethereumaddcollateral.py  0005_v1goerliaddquotetoken_v1ethereumaddquotetoken.py  0006_v1goerliremovequotetoken_v1ethereumremovequotetoken.py  0007_v1goerlidrawdebt_v1ethereumdrawdebt.py  0008_v1goerlirepaydebt_v1ethereumrepaydebt.py  0009_rename_interest_rate_v1ethereumpool_borrow_rate_and_more.py  0010_v1ethereumpoolsnapshot_collateral_token_balance_and_more.py  0011_alter_v1ethereumpoolsnapshot_address_and_more.py  0012_v1goerliliquidationauction.py  0013_rename_auctionprice_v1goerliliquidationauction_auction_price_and_more.py  0014_v1ethereumpoolsnapshot_collateral_token_address_and_more.py  0015_alter_v1ethereumdrawdebt_unique_together_and_more.py  0016_v1goerliliquidationauction_collateral_token_address_and_more.py  0017_v1ethereumaddcollateral_price_and_more.py  0018_v1ethereumpool_pending_inflator_and_more.py  0019_v1ethereumliquidationauction_and_more.py  0020_remove_v1ethereumliquidationauction_auction_price_and_more.py  0021_alter_v1ethereumpool_collateralization_and_more.py  0022_remove_v1ethereumpool_collateralization_and_more.py  0023_v1ethereumliquidationauction_wallet_address_and_more.py  0024_v1ethereumpool_utilization_and_more.py  0025_v1goerlimovequotetoken_v1ethereummovequotetoken.py  0026_v1ethereumgrantproposal_v1goerligrantproposal.py  0027_v1ethereumpool_current_meaningful_utilization_and_more.py  0028_v1goerlicurrentwalletpoolposition_and_more.py  0028_v2ethereumgrantproposal_v2ethereumliquidationauction_and_more.py  0029_alter_v1ethereumpool_total_bond_escrowed_and_more.py  0029_v1goerlipoolevent_v1ethereumpoolevent.py  0030_v1ethereumpoolevent_wallet_addresses_and_more.py  0030_v2goerliwalletpoolposition_and_more.py  0031_remove_v1ethereumpoolevent_pool_inflator_and_more.py  0031_v1goerliwalletpoolposition_and_more.py  0032_v1ethereumpoolbucketstate_bucket_price_and_more.py  0033_delete_v2ethereumaddcollateral_and_more.py  0034_v1ethereumpoolevent_collateral_token_price_and_more.py  0035_v2ethereumwallet_v2goerliwallet.py  0036_v2ethereumnotification_v2goerlinotification.py  (+74 more)
ajna/models/: __init__.py  base.py
ajna/sources/: defillama.py  rhinofi.py  subgraph.py
ajna/utils/: block.py  db.py  graphql.py  http.py  utils.py  views.py  wad.py
ajna/v1/: urls.py
ajna/v1/ethereum/: chain.py  models.py  tasks.py  urls.py
ajna/v1/goerli/: chain.py  models.py  tasks.py  urls.py
ajna/v1/modules/: auctions.py  events.py  grants.py  pools.py  positions.py  prices.py
ajna/v1/views/: __init__.py  auctions.py  grants.py  pool.py  pools.py  positions.py  search.py  stats.py  token.py  tokens.py  wallet.py
ajna/v2/: urls.py
ajna/v2/ethereum/: chain.py  models.py  tasks.py  urls.py
ajna/v2/goerli/: chain.py  models.py  tasks.py  urls.py
ajna/v2/modules/: at_risk.py  auctions.py  events.py  grants.py  pools.py  positions.py  prices.py  reserve_auctions.py
ajna/v2/views/: auctions.py  grants.py  notifications.py  pool.py  pools.py  reserve_auctions.py  search.py  stats.py  tokens.py  wallets.py
ajna/v3/: models.py  urls.py
ajna/v3/arbitrum/: chain.py  models.py  tasks.py  urls.py
ajna/v3/base/: chain.py  models.py  tasks.py  urls.py
ajna/v3/ethereum/: chain.py  models.py  tasks.py  urls.py
ajna/v3/goerli/: chain.py  models.py  tasks.py  urls.py
ajna/v3/modules/: at_risk.py  auctions.py  events.py  networks.py  overall_stats.py  pools.py  positions.py  prices.py  reserve_auctions.py
ajna/v3/optimism/: chain.py  models.py  tasks.py  urls.py
ajna/v3/polygon/: chain.py  models.py  tasks.py  urls.py
ajna/v3/views/: auctions.py  overall.py  pools.py  reserve_auctions.py  stats.py  tokens.py  wallets.py
ajna/v4/: models.py  urls.py
ajna/v4/arbitrum/: chain.py  models.py  tasks.py  urls.py
ajna/v4/avalanche/: chain.py  models.py  tasks.py  urls.py
ajna/v4/base/: chain.py  models.py  tasks.py  urls.py
ajna/v4/blast/: chain.py  (+3 more)
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
tests/: conftest.py  factories.py  helpers.py
tests/utils/: test_utils.py  test_wad.py
tests/v1/: factories.py
(+74 files in other folders)
