[tool.poetry]
description = "Ajna API service"
authors = []
license = "AGPL"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.35.57"
celery = "5.4.0"
chain-harvester = "0.38.1"
django-autoslug = "1.9.9"
django-bulk-load = "1.4.3"
django-celery-beat = "2.7.0"
django-cors-headers = "4.6.0"
django-environ = "0.11.2"
django-extensions = "3.2.3"
django-model-utils = "4.5.1"
django-redis = "5.4.0"
django = "5.1.3"
djangorestframework = "3.15.2"
eth-abi = "4.2.1"
eth-typing = "4.2.3"
gunicorn = "22.0.0"
hexbytes = "0.3.1"
hiredis = "2.3.2"
ijson = "3.3.0"
ipython = "8.29.0"
psycopg2 = "2.9.10"
pyopenssl = "24.2.1"
redis = "5.2.0"
requests = "2.32.3"
sentry-sdk = "2.18.0"
statsd = "4.0.1"
web3 = "6.19.0"
werkzeug = "3.1.3"
whitenoise = "6.8.2"
discord-webhook = "^1.3.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.4.6"
factory-boy = "3.3.1"
freezegun = "1.5.1"
pytest-django = "4.9.0"
pytest-mock = "3.14.0"
pytest-sugar = "1.0.0"
pytest = "8.3.3"
responses = "0.25.3"
pre-commit = "3.8.0"
ruff = "^0.7.3"


[tool.pytest.ini_options]
addopts = "--ds=config.settings.test --no-migrations --capture=no --verbose"


[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
exclude = [
  "ajna/migrations/"
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    "T201",
]
ignore = [
    "E731",
    "TRY300",
    "TRY003",
    "RUF012",
    "S108",
    "TRY002",
    "C901",
    "UP038",
    "SIM108",
    "UP032",
    "S608"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "S311"
]

[tool.ruff.lint.isort]
known-first-party = ["ajna"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
