[project]
name = "ajna-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.2",
    "chain-harvester>=1.17.0",
    "django-bulk-load>=1.4.3",
    "django-celery-beat==2.7.0",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-model-utils>=5.0.0",
    "django-redis>=5.4.0",
    "django>=5.1.0",
    "djangorestframework>=3.16.0",
    "eth-abi>=5.1.0",
    "eth-typing>=5.2.1",
    "gunicorn>=23.0.0",
    "hexbytes>=1.3.0",
    "hiredis>=3.1.0",
    "ijson>=3.3.0",
    "ipython>=9.2.0",
    "psycopg2>=2.9.10",
    "pyopenssl>=25.0.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sentry-sdk>=2.27.0",
    "statsd>=4.0.1",
    "web3>=7.10.0",
    "werkzeug>=3.1.3",
    "whitenoise>=6.9.0",
    "discord-webhook>=1.4.1"
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.1.0",
    "factory-boy>=3.3.3",
    "freezegun>=1.5.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.5",
    "responses>=0.25.7",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--ds=config.settings.test --no-migrations --capture=no --verbose"
pythonpath = [
  "ajna"
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
extend-exclude = [
  "*/migrations/*.py"
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
extend-select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # flake8-simplify
    "SIM",
    # flake8-pie
    "PIE",
    # flake8-commas
    "COM",
    # flake8-pyi
    "PYI",
    # flake8-pytest-style
    "PT",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # pep8-naming
    "N",
    # Perflint
    "PERF"
]
ignore = [
    "C901",
    "COM812",
    "E731",
    "PERF401",
    "PYI024",
    "RUF012",
    "S108",
    "S608",
    "SIM108",
    "TRY002",
    "TRY003",
    "TRY300",
    "UP038",
    "S105"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["ajna"]
